Media Controls: Single tap on controls

Single tap on controls to show UI instead of play/pause.

BUG=794592

Change-Id: I887a706b62911ff396b109e678ea82badafb712a